# Formulario-de-registro

./: Formulario de registro.py  app.py  database.db  images.db
poetry-dbp/: pyproject.toml
static/: data.js  index.js  login.js  styles.css
templates/: dashboard.html  home.html  index.html  layout.html  login.html  main.html  product.html  profile.html  register.html  tienda.html
