[tool.poetry]
name = "poetry-dbp"
version = "0.1.0"
description = ""
authors = ["EmmanuelMartinezSalcedo <emmanuel.martinez@ucsp.edu.pe>"]

[tool.poetry.dependencies]
python = "^3.10"
asttokens="2.0.5"
backcall="0.2.0 "
bcrypt="3.2.2"   
black="22.6.0"   
cffi="1.15.0"    
click="8.1.2"    
colorama="0.4.4" 
decorator="5.1.1"
dnspython="2.2.1"
email-validator="1.2.1"
executing="0.8.3"
flake8="4.0.1"
Flask="2.1.1"
Flask-Bcrypt="1.0.1"
Flask-Login="0.6.1"
Flask-SQLAlchemy="2.5.1"
Flask-WTF="1.0.1"
greenlet="1.1.2"
idna="3.3"
ipython="8.2.0"
itsdangerous="2.1.2"
jedi="0.18.1"
Jinja2="3.1.1"
MarkupSafe="2.1.1"
matplotlib-inline="0.1.3"
mccabe="0.6.1"
mypy-extensions="0.4.3"
parso="0.8.3"
pathspec="0.9.0"
pickleshare="0.7.5"
platformdirs="2.5.2"
prompt-toolkit="3.0.29"
pure-eval="0.2.2"
pycodestyle="2.8.0"
pycparser="2.21"
pyflakes="2.4.0"
Pygments="2.11.2"
six="1.16.0"
SQLAlchemy="1.4.36"
stack-data="0.2.0"
tomli="2.0.1"
traitlets="5.1.1"
wcwidth="0.2.5"
Werkzeug="2.1.1"
WTForms="3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
